Closed
Bug 763014
Opened 12 years ago
Closed 12 years ago
crash in PresShell::HandleEventInternal
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
mozilla16
Tracking | Status | |
---|---|---|
firefox15 | --- | verified |
People
(Reporter: jsmith, Assigned: smaug)
References
Details
(4 keywords)
Crash Data
Attachments
(1 file)
1.27 KB,
patch
|
MatsPalmgren_bugz
:
review+
Gavin
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-dc3575ac-70a4-4df5-bd0f-f31332120608 .
=============================================================
Steps:
1. Startup Nightly
2. Double-click the top portion of the firefox window
Result - Crash, reproducible.
Reporter | ||
Comment 1•12 years ago
|
||
What developer would be the right person to look at a a click-event based bug with the top window (resizing the firefox window)? What bugzilla component does this belong in?
Keywords: reproducible
Reporter | ||
Updated•12 years ago
|
Version: 15 Branch → 16 Branch
Regression range:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=30fc3d3e10d3&tochange=332ed5402ccf
Looks like bug 761572
Crashing Thread
Frame Module Signature Source
0 xul.dll PresShell::HandleEventInternal layout/base/nsPresShell.cpp:6408
1 xul.dll PresShell::HandleEventWithTarget layout/base/nsPresShell.cpp:6149
2 xul.dll nsEventStateManager::CheckForAndDispatchClick content/events/src/nsEventStateManager.cpp:4411
3 xul.dll nsEventStateManager::PostHandleEvent content/events/src/nsEventStateManager.cpp:3181
Blocks: 761572
Component: General → Event Handling
Keywords: regression
OS: Windows 7 → All
Product: Firefox → Core
QA Contact: general → events
Hardware: x86_64 → All
Comment 3•12 years ago
|
||
I can reproduce this with a clean profile using the latest nightly on Windows. Jason mentioned he had a few extensions, so I checked with a clean profile just to make sure.
Version: 16 Branch → Trunk
Comment 5•12 years ago
|
||
I can't reproduce this with a clean profile on Windows 7 with the latest 20120608 nightly build.
Comment 6•12 years ago
|
||
I can reproduce with clean/new profile bp-70c0e66f-1d67-43ad-8d0c-927a42120609
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1 ID:20120608081921
Crash when double click top/left/right/bottom window border if disabled Menubar.
Crash when double click Titlebar and left/right/bottom window border if enabled Menubar.
Comment 7•12 years ago
|
||
Oh, yep, reproduced with that more specific summary. Thanks Alice!
Comment 8•12 years ago
|
||
It's #1 top crasher in today's build with about 35 crashes per hour.
Updated•12 years ago
|
Crash Signature: [@ PresShell::HandleEventInternal(nsEvent*, nsEventStatus*)] → [@ PresShell::HandleEventInternal(nsEvent*, nsEventStatus*)]
[@ PresShell::HandleEventInternal]
Why does everyone keep setting version to 16 Branch? The bug causing this landed on Trunk only; therefore, only Trunk is affected.
Comment 10•12 years ago
|
||
(In reply to IU from comment #9)
> Why does everyone keep setting version to 16 Branch? The bug causing this
> landed on Trunk only; therefore, only Trunk is affected.
The trunk version moves every six weeks, so if the bug is fixed lately, how do you know you must uplift the patch to Aurora or even Beta?
The version where it first appeared AND the regression keyword tells you which version is or will be affected.
Comment 13•12 years ago
|
||
Since roc is away til the 19th, how about backing out Bug 761572 till he gets back?
Assignee | ||
Updated•12 years ago
|
Assignee: nobody → bugs
Assignee | ||
Comment 14•12 years ago
|
||
https://tbpl.mozilla.org/?tree=Try&rev=d4d67b932886
Could anyone test the tryserver builds.
They will be in http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/
Look for d4d67b932886
Assignee | ||
Comment 15•12 years ago
|
||
Builds are here http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/opettay@mozilla.com-d4d67b932886/
(I don't know how to reproduce this bug on Linux, so any with Windows, please test.)
Comment 16•12 years ago
|
||
(In reply to Olli Pettay [:smaug] from comment #15)
> (I don't know how to reproduce this bug on Linux, so any with Windows,
> please test.)
That fixes the crash for me
Assignee | ||
Updated•12 years ago
|
Attachment #631730 -
Flags: review?(matspal)
Reporter | ||
Comment 17•12 years ago
|
||
(In reply to IU from comment #16)
> (In reply to Olli Pettay [:smaug] from comment #15)
> > (I don't know how to reproduce this bug on Linux, so any with Windows,
> > please test.)
>
> That fixes the crash for me
Same with me.
Comment 18•12 years ago
|
||
Comment on attachment 631730 [details] [diff] [review]
WIP
r=mats
Attachment #631730 -
Flags: review?(matspal) → review+
Assignee | ||
Comment 19•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Updated•12 years ago
|
Target Milestone: --- → mozilla16
Updated•12 years ago
|
tracking-firefox16:
? → ---
Comment 21•12 years ago
|
||
Comment on attachment 631730 [details] [diff] [review]
WIP
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 761572
User impact if declined: crash, we need this on aurora when bug 761572 lands there
Testing completed (on m-c, etc.): on m-c since 2012-06-10
Risk to taking this patch (and alternatives if risky): low
String or UUID changes made by this patch: none
Attachment #631730 -
Flags: approval-mozilla-aurora?
Comment 22•12 years ago
|
||
Comment on attachment 631730 [details] [diff] [review]
WIP
Mats, can you land this on aurora along with bug 761572?
Attachment #631730 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 23•12 years ago
|
||
status-firefox15:
--- → fixed
Comment 25•12 years ago
|
||
(In reply to Alice0775 White from comment #6)
> I can reproduce with clean/new profile
> bp-70c0e66f-1d67-43ad-8d0c-927a42120609
>
> Mozilla/5.0 (Windows NT 6.1; WOW64; rv:16.0) Gecko/16.0 Firefox/16.0a1
> ID:20120608081921
>
> Crash when double click top/left/right/bottom window border if disabled
> Menubar.
> Crash when double click Titlebar and left/right/bottom window border if
> enabled Menubar.
Able to see the crash on Nightly 20120608081921.
Verified fixed on FF 15b3 on Win 7/64, Ubuntu 12.04 and Mac OS X 10.6.
Status: RESOLVED → VERIFIED
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•