Bug 763014 - crash in PresShell::HandleEventInternal, r=mats